# minecraft_house_gen

./: .gitignore  README.md  ascii_palette.example.json  ascii_to_structure.py  decode_sample_ids.py  legacy_id_palette.json  minecraft_house_diffusion.ipynb  minecraft_house_diffusion.py  npy_to_structure.py  presentation  pyproject.toml
mc_builds/: mapping.json
mc_builds/files/: build_1.npz  build_10.npz  build_100.npz  build_1000.npz  build_10000.npz  build_10001.npz  build_10002.npz  build_10003.npz  build_10004.npz  build_10005.npz  build_10006.npz  build_10007.npz  build_10008.npz  build_10009.npz  build_1001.npz  build_10010.npz  build_10011.npz  build_10012.npz  build_10013.npz  build_10014.npz  build_10016.npz  build_10017.npz  build_10018.npz  build_10019.npz  build_1002.npz  build_10021.npz  build_10023.npz  build_10024.npz  build_10025.npz  build_10027.npz  build_10028.npz  build_10029.npz  build_1003.npz  build_10030.npz  build_10031.npz  build_10032.npz  build_10033.npz  build_10034.npz  build_10035.npz  build_10036.npz  (+12268 more)
src/mc_build_vae.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/mcvae/: __init__.py  cli.py  data.py  diffusion.py  generate.py  io.py  model.py  train.py  train_diffusion.py
v1-code/: nbt_utils.py
